--- a/index.html
+++ b/index.html
@@ -325,6 +325,13 @@ body {
                     <img src="img/GitHub_Logo.png" href="" style="height:70px; margin:30px;" /></a>
             </div>
             <div class="row center">
+                <h5 class="valign center-align" style="white-space: nowrap; "> Programming partner </h5>
+                <br>
+                <div class="col s12  m8 offset-m2  l8 offset-l2">
+                    <a class="valign center-align" href="https://www.hackerearth.com" target="_blank"><img src="img/HE_logo.png" style="width:270px; margin:30px;" /></a>
+                </div>
+            </div>
+            <div class="row center">
                 <h5 class="valign center-align" style="white-space: nowrap; "> Organised by </h5>
                 <br>
                 <div class="col s12  m8 offset-m2  l8 offset-l2">
