--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ body {
                 </div>
             </div>
             <div class="row ">
-                <h5 class="thin valign center-align white-text" style="white-space: nowrap; font-weight:200">National Hackathon</h5>
+                <h5 class="thin valign center-align white-text" style="white-space: nowrap; font-weight:200">National Hackathon<br>November 3,4,5</h5>
             </div>
             <div class="row ">
                 <div style="text-align:center; ">
@@ -133,7 +133,16 @@ body {
                     <div class="card themecolor z-depth-0 ">
                         <div class="card-content black-text ">
                             <span class="card-title black-text">Instructions</span>
-                            <p class="about light center" style="font-size:18px;text-align:start;">This is a 30 hour contest. Contestants need to brainstorm and arrive at smart solutions for fighting corruption. You can participate individually or in a team of 2. There will be a prelims where top teams will be selected for the offline event. The selected teams will be invited to build their ideas into reality.</p>
+                            <p class="about light center" style="font-size:18px;text-align:start;">This is a 30 hour contest. Contestants need to brainstorm and arrive at smart solutions for fighting corruption. You can participate individually or in a team of 2. There will be a prelims where top teams will be selected for the offline event. The selected teams will be invited to build their ideas into reality. It can be a webapp/website, mobile app or a hardware prototype that you build at the offline event.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 ">
+                    <div class="card themecolor z-depth-0 ">
+                        <div class="card-content black-text ">
+                            <span class="card-title black-text">Example Problem/Solution</span>
+                            <p class="about light center" style="font-size:18px;text-align:start;">Problem : One of the major indication of corruption is delay in service delivery.</p>
+                            <p class="about light center" style="font-size:18px;text-align:start;">Solution : System to make sure that concerned officer delivers the service in a specific time period with file tracking using unique service registration number.</p>
                         </div>
                     </div>
                 </div>
