--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ body {
                 </div>
             </div>
             <div class="row ">
-                <h5 class="thin valign center-align white-text" style="white-space: nowrap; font-weight:200">National Hackathon<br>November 3,4,5</h5>
+                <h5 class="thin valign center-align white-text" style="white-space: nowrap; font-weight:200">National Hackathon<br>November 3,4,5 2016</h5>
             </div>
             <div class="row ">
                 <div style="text-align:center; ">
